# remnawave-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/remnawave_mcp/: api_client.py  server.py
src/remnawave_mcp/tools/: hosts.py  nodes.py  squads.py  subscriptions.py  system.py  users.py
tests/: test_server.py
