[project]
name = "remnawave-mcp-server"
version = "1.0.0"
description = "MCP server for Remnawave panel API - manage users, nodes, hosts, and system via Claude Code or any MCP client"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "ssasuoirafen" }]
keywords = ["mcp", "remnawave", "xray", "vpn", "vless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Repository = "https://github.com/ssasuoirafen/remnawave-mcp-server"

[project.scripts]
remnawave-mcp = "remnawave_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remnawave_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
